--- a/oop_game-v2/index.html
+++ b/oop_game-v2/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Phrase Hunter</title>
+	<title>Butterfly Hunter</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/animate.css" rel="stylesheet">
