--- a/oop_game-v2/index.html
+++ b/oop_game-v2/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="main-container">
 		<div id="overlay" class="start">
-			<h2 class="title">Phrase Hunter</h2>
+			<h2 class="title">Painters Palette</h2>
 			<h1 id="game-over-message"></h1>
 			<button id="btn__reset">Start Game</button>
 		</div>
