--- a/oop_game-v2/index.html
+++ b/oop_game-v2/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Butterfly Hunter</title>
+	<title>Painters Palette</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/styles.css" rel="stylesheet">
 	<link href="css/animate.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 		</div>
 
 		<div id="banner" class="section">
-			<h2 class="header">Phrase Hunter</h2>
+			<h2 class="header">Painters Palette</h2>
 		</div>
 
 		<div id="phrase" class="section">
