--- a/oop_game-v2/index.html
+++ b/oop_game-v2/index.html
@@ -19,7 +19,8 @@
 		</div>
 
 		<div id="banner" class="section">
-			<h2 class="header">Painters Palette</h2>
+			<h2 class="header">Guess The Acrylic Paint Color</h2>
+
 		</div>
 
 		<div id="phrase" class="section">
